[package]
name = "use_grpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpc            = "~0.7"
protobuf        = "~2"
futures         = "~0.3"
grpc-protobuf   = "0.7.1"
[build-dependencies]
protoc-rust-grpc = "~0.7"