[package]
name = "use_serde"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.130",features=["derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_yaml = "0.8"
